Changes for Filter Effects specification
----------------------------------------

2012-06-17  Dirk Schulze  <dschulze@adobe.com>
- make syntax of custom() and feCustom follow CSS Units and Values
- begin cleaning up feCustom section

2012-06-17  Dirk Schulze  <dschulze@adobe.com>
- add link to ChangeLog, similar to other specs

2012-06-17  Dirk Schulze  <dschulze@adobe.com>

- edit Makefile to use FXTF status text
- status of document is generated by W3C server now
- same for date of last edit
- copied images from CSS Shader to Filter Effects
- make use of 'issue' class for ISSUES

2012-05-07  Erik Dahlström  <ed@opera.com>

- Moved the 'color-interpolation-filters' property definition from the 
  painting chapter in SVG to here.

2012-03-28  Dean Jackson  <dino@apple.com>

- Restored all the examples, element definitions and IDL interfaces
  from previous version of the spec, which I had accidentally deleted
  when moving from the XML source.

2011-12-17  Dean Jackson  <dino@apple.com>

- Added a simple HTML redirection into publish/index.html since
  it's hard to find the new spec location.
- opacity() had values the wrong way around (should match CSS opacity)
- remove sharpen() effect (as resolved at TPAC)
- mention that hue-rotate should not normalize
- remove gamma() and replace with the more useful brightness() and contrast()
- blur() should only take one parameter to be more equivalent to CSS shadows

2011-11-05  Dean Jackson  <dino@apple.com>

- Change to new specification style. Archive some old content.
- Merged CSS Shaders proposal and Filter Effects. This
  included a number of small tweaks to the abstract and
  introduction sections.
- Added security section given background on timing attacks
  and cross-origin restrictions.
- 0-1 parameters for functions changed to 0%-100%
- Fixed grayscale and sepia functions (they were very wrong)

2011-10-14  Erik Dahlström  <ed@opera.com>

- Some minor tweaks of the intro section for FPWD publication