@@ -835,10 +835,9 @@ interpolations occur by default in the sRGB color space.</p>
   </dd>
   
   <dt>
-    custom(&lt;vertex-shader&gt; &lt;fragment-shader&gt;? [ , &lt;vertex-mesh&gt; ]? [ , &lt;params&gt; ]?)
+    custom(&lt;vertex-shader&gt; [ , &lt;fragment-shader&gt; ]? [ , &lt;vertex-mesh&gt; ]? [ , &lt;params&gt; ]?)
   </dt>
   <dd>
-      <p class="issue">Should &lt;fragment-shader&gt; for short hand support the mix() function as well?</p>
       <table class="values-desc">
           <tr>
               <td><code>&lt;vertex-shader&gt;</code></td>
@@ -846,12 +845,15 @@ interpolations occur by default in the sRGB color space.</p>
           </tr>
           <tr>
               <td><code>&lt;fragment-shader&gt;</code></td>
-              <td><code>&lt;uri&gt; | none</code></td>
+              <td><code>&lt;uri&gt; | mix(&lt;uri&gt; [ , &lt;blend-mode&gt; ]? [ , &lt;alpha-compositing&gt; ]?) | none</code></td>
           </tr>
           <tr>
               <td><code>&lt;vertex-mesh&gt;</code></td>
-              <td><code>&lt;integer&gt;{0,2} &lt;box&gt;? [ detached | attached ]?</code><br />
-                  where: <code>&lt;box&gt; = filter-box | border-box | padding-box | content-box</code></td>
+              <td><code>&lt;integer&gt;{0,2} &lt;box&gt;? [ detached | attached ]?</code></td>
+          </tr>
+          <tr>
+              <td><code>&lt;box&gt;</code></td>
+              <td><code>filter-box | border-box | padding-box | content-box</code></td>
           </tr>
           <tr>
               <td id='#shader-params'><code>&lt;params&gt;</code></td>
@@ -5922,7 +5924,7 @@ The RNG is under construction, and only the individual RNG snippets are availabl
       </tr>
       <tr>
           <td>
-              &lt;css-3d-transform&gt;
+              &lt;transform-function&gt;
           </td>
           <td>
               mat4
@@ -6049,8 +6051,8 @@ The RNG is under construction, and only the individual RNG snippets are availabl
           <td>Interpolate between the array elements.</td>
       </tr>
       <tr>
-          <td><code>&lt;css-3d-transform&gt;</code></td>
-          <td>Follows the <a href="http://www.w3.org/TR/css3-3d-transforms/#animation">CSS 3D transform interpolation rules</a>.</td>
+          <td><code>&lt;transform-function&gt;</code></td>
+          <td>Follows the <a href="http://www.w3.org/TR/css3-transforms/#animation">CSS3 transform interpolation rules</a>.</td>
       </tr>
       <tr>
           <td><code>&lt;mat&gt;</code></td>
