@@ -1227,13 +1227,10 @@
     keyword is not allowed. The markup equivalent of this function is <a
     href="#dropshadowEquivalent">given below</a>.
 
-   <dt> custom(&lt;vertex-shader&gt; &lt;fragment-shader&gt;? [ ,
+   <dt> custom(&lt;vertex-shader&gt; [ , &lt;fragment-shader&gt; ]? [ ,
     &lt;vertex-mesh&gt; ]? [ , &lt;params&gt; ]?)
 
    <dd>
-    <p class=issue>Should &lt;fragment-shader&gt; for short hand support the
-     mix() function as well?</p>
-
     <table class=values-desc>
      <tbody>
       <tr>
@@ -1244,15 +1241,19 @@
       <tr>
        <td><code>&lt;fragment-shader&gt;</code>
 
-       <td><code>&lt;uri&gt; | none</code>
+       <td><code>&lt;uri&gt; | mix(&lt;uri&gt; [ , &lt;blend-mode&gt; ]? [ ,
+        &lt;alpha-compositing&gt; ]?) | none</code>
 
       <tr>
        <td><code>&lt;vertex-mesh&gt;</code>
 
        <td><code>&lt;integer&gt;{0,2} &lt;box&gt;? [ detached | attached
-        ]?</code><br>
-        where: <code>&lt;box&gt; = filter-box | border-box | padding-box |
-        content-box</code>
+        ]?</code>
+
+      <tr>
+       <td><code>&lt;box&gt;</code>
+
+       <td><code>filter-box | border-box | padding-box | content-box</code>
 
       <tr>
        <td id="#shader-params"><code>&lt;params&gt;</code>
@@ -12648,7 +12649,7 @@ double turbulence(int nColorChannel, double *point, double <a
       <td> float[n]
 
      <tr>
-      <td> &lt;css-3d-transform&gt;
+      <td> &lt;transform-function&gt;
 
       <td> mat4
 
@@ -12783,7 +12784,7 @@ double turbulence(int nColorChannel, double *point, double <a
      <td>Interpolate between the array elements.
 
     <tr>
-     <td><code>&lt;css-3d-transform&gt;</code>
+     <td><code>&lt;transform-function&gt;</code>
 
      <td>Follows the <a
       href="http://www.w3.org/TR/css3-3d-transforms/#animation">CSS 3D
