@@ -1,11 +1,18 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2012-06-18  Dirk Schulze  <dschulze@adobe.com>
+
+- updated 'custom' syntax to latest proposal
+- Fixed links to CSS3 Transforms; changed <css-3d-transform> to <transform-function>
+
 2012-06-17  Dirk Schulze  <dschulze@adobe.com>
+
 - make syntax of custom() and feCustom follow CSS Units and Values
 - begin cleaning up feCustom section
 
 2012-06-17  Dirk Schulze  <dschulze@adobe.com>
+
 - add link to ChangeLog, similar to other specs
 
 2012-06-17  Dirk Schulze  <dschulze@adobe.com>
